--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>С Днем Святого Валентина!</h1>
       
         <p>Пусть этот день принесет тебе тепло, радость и любовь. </p>
-        <p>С любовью, ХРИША</p>
+        <p>С любовью, Григорий</p>
         <button id="heartButton">Нажми на меня!</button>
         <div id="heartsContainer"></div>
     </div>
